--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -61,7 +61,8 @@
                         <p:column>
                             <h:outputText value="brutto-zus"/>
                         </p:column>
-                        <p:column width="20">
+                        <p:column width="20" style="text-align: center;">
+                            <h:outputText value="#{indexpasek+1}"/>
                             <h:outputText value="student" rendered="#{itempasek.kalendarzmiesiac.angaz.student}" style="color: #009688;"/>
                         </p:column>
                     </p:row>
