--- a/npkpir_23/web/ksiegowa/sub/layoutZestawienie/west.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZestawienie/west.xhtml
@@ -12,7 +12,10 @@
            
             <p:panelGrid id="westWpisWidok" columns="2" style="margin-left: 7%">
                 <h:outputText value="Podatnik:" style="text-shadow: #6374AB 1px -1px 1px"/>
-                <h:outputText value="#{WpisView.podatnikObiekt.nazwapelnaPDF}"/>
+                <p:selectOneMenu id="podatnikWpisu" value="#{WpisView.podatnikObiekt}" style="width: 170px;" converter="#{podatConv}" filter="true" filterMatchMode="contains">
+                    <f:selectItems value="#{podatnikWyborView.listaPodatnikowNoFK}" var="p" itemLabel="#{p.nazwapelnaPDF}" itemValue="#{p}"/>
+                    <p:ajax event="change" partialSubmit="true"  listener="#{WpisView.naniesDaneDoWpis()}" />
+                </p:selectOneMenu><!-- comment -->
                 <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
                 <p:selectOneMenu value="#{WpisView.rokWpisu}" style="width: 70px;">
                     <f:selectItems value="#{roki.rokiList}"/>
