--- a/npkpir_23/web/ksiegowa/sub/zestawienieRok.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zestawienieRok.xhtml
@@ -2,8 +2,29 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
->
-   
+        
+    xmlns:bcf="http://brzaskun.com/facelets"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <bcf:ajaxs/>
+    <h:form>
+            <p:panelGrid id="westWpisWidok" columns="6" style="margin-left: 7%;width: 800px;">
+                <p:selectOneMenu id="podatnikWpisu" value="#{WpisView.podatnikObiekt}" style="width: 170px;" converter="#{podatConv}" filter="true" filterMatchMode="contains">
+                    <f:selectItems value="#{podatnikWyborView.listaPodatnikowNoFK}" var="p" itemLabel="#{p.nazwapelnaPDF}" itemValue="#{p}"/>
+                    <p:ajax event="change" partialSubmit="true"  listener="#{WpisView.naniesDaneDoWpis()}" update="akordeon:archiwum"/>
+                </p:selectOneMenu><!-- comment -->
+<!--                <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>-->
+                <p:selectOneMenu value="#{WpisView.rokWpisu}" style="width: 70px;">
+                    <f:selectItems value="#{roki.rokiList}"/>
+                    <p:ajax event="change" partialSubmit="true" update="akordeon:archiwum"/>
+                </p:selectOneMenu>
+<!--                <h:outputText value="Miesiąc:" style="text-shadow: #6374AB 1px -1px 1px"/>-->
+                <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}" style="width: 70px;">
+                    <f:selectItems value="#{mce.mceList}"/>
+                    <p:ajax event="change" partialSubmit="true" update="akordeon:archiwum"/>
+                </p:selectOneMenu>
+            </p:panelGrid>
+        </h:form>
     <p:tabView id="akordeon" style="width: 1500px;" rendered="#{WpisView.biuroiszef eq true}">
         <ui:include src="zestawienieRok_dane.xhtml" />
             <ui:include src="zestawienieRok_wykres.xhtml" rendered="#{WpisView.ksiegaryczalt}"/>
