naprawa wystawianie faktur emeryt

--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
@@ -73,7 +73,9 @@
             
             <p:dataTable id="dokumentyOkresowe" value="#{fakturaView.fakturyokresowe}" var="wpis"  rowIndexVar="row"  filteredValue="#{fakturaView.fakturyokresoweFiltered}"  rendered="#{WpisView.biuroiszef eq true}"
                          selection="#{fakturaView.gosciwybralokres}" rowKey="#{wpis.hashCode()}" style="max-width: 1650px;" widgetVar="okresTable2" sortBy="#{wpis.dokument.kontrahent.nazwabezCudzy}" sortOrder="ascending"
-                         rowSelectMode="add">
+                         rowSelectMode="add"
+                         rowsPerPageTemplate="40,120,250,500" paginatorPosition="top" paginator="true" rows="40"
+                         >
                 
                 <f:facet name="header">  
                     <h:outputText value="Zestawienie faktur okresowych: " />  
