--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_2.xhtml
@@ -189,7 +189,7 @@
                     <p:commandButton update=":form1:messages" actionListener="#{pdfFaktura.drukujokresowa(wpis, row, WpisView.podatnikObiekt)}" icon="ui-icon-print" />
                 </p:column>
                 <p:column  headerText="edytuj" style="text-align: center;"  width="40">
-                    <p:commandButton  update=":akordeon:formstworz, :akordeon akordeon:formokresowe2:dokumentyOkresowe" actionListener="#{fakturaView.skierujfakturedoedycji2023(wpis)}" 
+                    <p:commandButton  update=":akordeon:formstworz, :akordeon" actionListener="#{fakturaView.skierujfakturedoedycji(wpis)}" 
                                       icon="ui-icon-script" oncomplete="aktywujpolewyboruklientanafakturze();" />
                 </p:column>
                 <p:rowExpansion>
